gccida/c0/df_ref_record
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1347:88: error: invalid suffix 'xmode' on integer constant
&& ( mode_size[( unsigned __int8)BYTE2( *( _DWORD *)reg)] < ( int)mode_size[*(short *)0xmode] 
                                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1350:14: error: expected expression
loc = ( rtx *)reg->fld; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1360:5: error: expected expression
JSC::Yarr::Interpreter<unsigned char>::Interpreter( df_0, rega, loc, insn, ref_type, ref_flags); 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1399:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rega)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1400:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rega)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1409:5: error: expected expression
JSC::Yarr::Interpreter<unsigned char>::Interpreter( df_0, v11, loc, insn, ref_type, ref_flags); 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1409:1: error: redefinition of label 'JSC'
JSC::Yarr::Interpreter<unsigned char>::Interpreter( df_0, v11, loc, insn, ref_type, ref_flags); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/df.c:1360:1: note: previous definition is here
JSC::Yarr::Interpreter<unsigned char>::Interpreter( df_0, rega, loc, insn, ref_type, ref_flags); 
^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_ref_record/src/obj/df.o] Error 1
